update: file type

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
         <!-- htmlcs-disable -->
         <title><%= htmlWebpackPlugin.options.title %></title>
         <!-- htmlcs-enable -->
+        <script src="https://map.qq.com/api/gljs?v=1.exp&key=OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77"></script>
+    </head>
     <body>
         <div id="app"></div>
     </body>
