update: pwa support

--- a/src/index.html
+++ b/src/index.html
@@ -12,3 +12,10 @@
         <div id="app"></div>
     </body>
 </html>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('serviceWorker.js').catch();
+        });
+    }
+</script>
